# lumina

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .mise.toml  ABOUT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  Dockerfile  Dockerfile.env  LICENCE  LICENSE  README.MD  README.md  SECURITY.md  WHY.md  biome.json  build.Dockerfile  build.rs  build.sh  bun.lockb  bunfig.toml  docker-compose-postgres.yml  docker-compose-sqlite.yml  env.Dockerfile  mise.toml  nodemon.json  package-lock.json  package.json  tailwind.config.js  tobundle.ts  tsconfig.json  watch.bash  watch.sh
.devcontainer/: devcontainer.json
.devcontainer/fedora_devenv/: devcontainer.Dockerfile  devcontainer.json
.devcontainer/ghcodespaces/: devcontainer.json
.devcontainer/ghcodespaces/scripts/: podman  postAttach.sh  postCreate.sh
.devcontainer/ubuntu devenv/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: clippy2.yaml  fmt.yml  rust-clippy.yml  stale.yml  test-fe-gleam.yml  test-fe-ts.yml  test.yml
.run/: Build client.run.xml  Build server.run.xml  Build styles.run.xml  Development run.run.xml  Development watch.run.xml  Format.run.xml  Local development run with watcher.run.xml  Local development run.run.xml  Prep for local development run.run.xml  Release run.run.xml  Run (with Rust backend and Gleam frontend) (1).run.xml  Run docker-compose-down-all.run.xml  Run docker-compose-up-postgres-no-optimise.run.xml  Run docker-compose-up-postgres.run.xml  Run docker-compose-up-sqlite-no-optimise.run.xml  Run docker-compose-up-sqlite.run.xml  Watch (with Rust backend and Gleam frontend).run.xml
ObsidianVault/: README.md
ObsidianVault/.obsidian/: app.json  community-plugins.json  graph.json  types.json
ObsidianVault/Concepts/: Polling system.md  Timeline generation.md
ObsidianVault/Concepts/Backend and API's/: Polling system.md
ObsidianVault/Concepts/User interface/: Colour palettes.md  Home page.md
ObsidianVault/Excalidraw/: Home page 2024-04-25 22.12.43.excalidraw.md
SQL/: create_pg.sql
assets/: README.MD
assets/fonts/Vend_Sans/: OFL.txt  README.txt
assets/handlebars/: home-side.handlebars  postrender.handlebars
assets/html/: examplepost.html  home.html  index.html  login.html  signup.html  writer-from-php.html  writer.html
assets/js/: login.js  prefetch.js  signup.js  site-home.js
assets/markdown/: intro.md
assets/styles/: initial_customstyles.css  main.pcss
assets/toml/: initial_config.toml
backend/: bun.lockb  gleam.toml  manifest.toml  package.json  tailwind.config.js  tsconfig.json
backend-rs/: Cargo.toml
backend-rs/frontend_assets/handlebars/: home-side.handlebars
backend-rs/frontend_assets/html/: examplepost.html  home.html  index.html  login.html  signup.html
backend-rs/frontend_assets/styles/: initial_customstyles.css
backend-rs/libs/lumina-urls/: Cargo.toml
backend-rs/libs/lumina-urls/src/: lib.rs
backend-rs/src/: api_fe.rs  api_ii.rs  assets.rs  config.rs  database.rs  pages.rs  post.rs  serve.rs  server.rs  tell.rs
backend-rs/src/api_fe/: media.rs
backend-rs/src/database/: fetch.rs  users.rs
backend/assets/handlebars/: postrender.handlebars  timeline.handlebars
backend/assets/html/: writer.html
backend/assets/styles/: main.pcss
backend/assets/toml/: initial_config.toml
backend/src/: lumina.gleam  lumina_rsffi.gleam  rsffi.erl
backend/src/lumina/: database.gleam  users.gleam
backend/test/: backend_test.gleam  lumina_test.gleam
client/: README.md  app.css  gleam.toml  index.html  manifest.toml  package.json  tailwind.config.js
client/priv/static/: lumina_client.min.mjs
client/src/: lumina_client.gleam
client/src/lumina_client/: dom.gleam  dom_ffi.mjs  dom_ffi.ts  errors.gleam  helpers.gleam  message_type.gleam  model.gleam  model_type.gleam  view.gleam
docker-compose/: with-postgres-dev.yml  with-postgres.yml  with-sqlite-dev.yml  with-sqlite.yml
docs/: data_storage.md
frontend/: README.md  TODO.md  gleam.toml  manifest.toml
frontend-ts/: app.test.ts  app.ts  bun.lockb  login.ts  package.json  signup.ts  site.ts
frontend-ts/json/: random-username-parts.json
frontend/src/: editor_ffi.mjs  elementactions_ffi.ts  fejson_ffi.mts  fejson_ffi.ts  ffi.mjs  ffi.ts  frontend.gleam
libs/lumina-urls/: Cargo.toml
libs/lumina-urls/src/: lib.rs
mise/tasks/: build.toml  check.toml  docker-compose-tasks.toml  format.toml  podman-tasks.toml  podman.toml  run.toml
notes/: Todo's.md  data-storage.md  notification resolver.md
notes/.obsidian/: backlink.json  core-plugins.json
notes/Design choices/Philosophies/: 'Timeline carries most' and the database.md  Frontend > Non-minimalist design.md
notes/Design choices/Rationale/: Backend > Connection pooling and caching.md  Backend > Error handling and logging.md  Backend > Rate limiting.md  Backend > Timeline carries most.md  Web client > Gleam language.md
notes/Philosophies/: 'Timeline carries most' and the database.md
notes/Todo's/: Client.md  Server.md
notes/Todo's/Server/: Deprecate SQLite, continue with only Postgres, further solidifying Podman as a development tool for Lumina.md  (+1 more)
rsffi/: Cargo.toml
rsffi/src/: lib.rs
server/: Cargo.toml
server/src/: client_communication.rs  database.rs  errors.rs  main.rs  rate_limiter.rs  staticroutes.rs  tests.rs  timeline.rs  user.rs
server/src/helpers/: events.rs  mod.rs
server/src/tests/: tests.rs
shared/: gleam.toml  manifest.toml
src/: api_fe.rs  api_ii.rs  assets.rs  database.rs  instance_poller.rs  jsclientjsonprovider.rs  log.rs  main.rs  post.rs  serve.rs  storage.rs  tell.rs
src-backend/: api_fe.rs  api_ii.rs  assets.rs  database.rs  main.rs  serve.rs  tell.rs
src-backend/database/: users.rs
src-frontend/html/: home.html  index.html  login.html  signup.html  writer.html
src-frontend/js/: prefetch.js  signup.js  site-home.js
src-frontend/ts/: app.ts  login.ts  signup.ts  site.ts
src/api_fe/: fe.rs
src/assets/: README.MD  index.html  initial_config.toml  initial_customstyles.css  main.pcss  site.js  timeline.handlebars
src/database/: users.rs
(+61 files in other folders)
