[workspace]
resolver = "3"
members = ["./server"]
default-members = ["./server"]

[workspace.lints.clippy]
expect_used = { level = "deny", priority = 0 }
panic_in_result_fn = { level = "deny", priority = 0 }
useless_attribute = "deny"
arithmetic_side_effects = "warn"
missing_docs = "forbid"
style = {  level = "warn", priority = -1 }
missing_panics_doc = "warn"
pedantic = { level = "warn", priority = -1 }
