[package]
name = "lumina-server"
version = "0.1.0"
edition = "2024"
build = "../build.rs"

[[bin]]
name = "lumina-server"
path = "src/main.rs"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rocket = "0.5.1"
ws = { package = "rocket_ws", version = "0.1.1" }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
cynthia_con = { version = "0.1.2" }
dotenv = "0.15.0"
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1"] }
bcrypt = "0.17.0"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.27.0", features = ["bundled"] }
tabled = "0.18.0"
regex = "1.10.5"
fastbloom = "0.9.0"
