[package]
name = "lumina-server"
version = "0.1.0"
edition = "2024"
license = "AGPL-3"

[[bin]]
name = "lumina-server"
path = "src/main.rs"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rocket = "0.5.1"
ws = { package = "rocket_ws", version = "0.1.1" }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
cynthia_con = { version = "0.1.4" }
dotenv = "0.15.0"
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1"] }
bcrypt = "0.17.0"
r2d2 = "0.8.10"
tabled = "0.20.0"
regex = "1.10.5"
redis = { version = "0.32.4", features = ["r2d2"] }
time = "0.3.20"
base64 = "0.22"
